@@ -3,16 +3,16 @@
 			   *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:13302
+  FORMAL BUILD NUMBER:13303
 */
 
-#define PRODUCT_VER_STRING "2.0.7.13302"
-#define FILE_VER_STRING "WI-V2.0.7.13302"
-#define LICENSE_VER_STRING "WI-V2.0.7.13302"
-#define FILE_VER_NUMBER 2, 0, 7, 13302
+#define PRODUCT_VER_STRING "2.0.7.13303"
+#define FILE_VER_STRING "WI-V2.0.7.13303"
+#define LICENSE_VER_STRING "WI-V2.0.7.13303"
+#define FILE_VER_NUMBER 2, 0, 7, 13303
 #define FB_MAJOR_VER "2"
 #define FB_MINOR_VER "0"
 #define FB_REV_NO "7"
-#define FB_BUILD_NO "13302"
+#define FB_BUILD_NO "13303"
 #define FB_BUILD_TYPE "V"
 #define FB_BUILD_SUFFIX "Firebird 2.0"
